fix overlapping issues on mobile screens

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -6,12 +6,25 @@ $address-font-color: white;
 $msg-font-color: white;
 $msg-bold-color: $blue-color;
 
+//FONT SIZES
+$heading: clamp(1rem, 20px, 1.2rem);
+$standard: clamp(0.8rem, 16px, 1rem);
+$highlight: clamp(0.9rem, 18px, 1.1rem);;
+$social-heading: clamp(1rem, 26px, 1.4rem);
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 #contact-container{
-    flex-grow: 1;
+    flex: 1;
     align-self: center;
     padding: 0 0;
     margin-top: 2.5vh;
-    max-width: 60vw;
+    width: clamp(300px, 60vw, 1000px);
     
     display: grid;
     grid-template-columns: auto;
@@ -24,6 +37,7 @@ $msg-bold-color: $blue-color;
 .contact-section{
     display: flex;
     padding: 0.5rem;
+    /* gap: 1rem; */
 }
 
 .box{
@@ -31,7 +45,7 @@ $msg-bold-color: $blue-color;
     /* background-color: white; */
     min-width: 50%;
     height: 100%;
-    padding-block: 1.5rem;
+    padding-block: 2rem;
     
     display: flex;
     flex-direction: column;
@@ -46,8 +60,12 @@ $msg-bold-color: $blue-color;
 
 }
 
+.contact-info{
+    font-size: $standard;
+}
+
 .contact-heading{
-    font-size: 1.2rem;
+    font-size: $heading;
     color:  $blue-color;
 }
 
@@ -56,7 +74,7 @@ $msg-bold-color: $blue-color;
 }
 
 #map-box{
-    width: clamp(250px, 80%, 450px);
+    width: clamp(200px, 80%, 450px);
     min-height: 300px;
     margin: auto;
 
@@ -79,15 +97,16 @@ $msg-bold-color: $blue-color;
     align-items: center;
 
     .msg{
+        font-size: $standard;
         color: $msg-font-color;
-        padding: 0.5rem;
         margin-bottom: 1.5rem;
-        line-height: 1.5;
+        line-height: 1.4;
 
-        width: clamp(200px, 80%, 800px);
+        width: clamp(100px, 80%, 800px);
     }
 
     .msg-bold{
+        font-size: $highlight;
         font-weight: 700;
         color: $msg-bold-color;
     }
@@ -99,7 +118,7 @@ $msg-bold-color: $blue-color;
     justify-content: center;
 
     .social-text{
-        font-size: 1.5rem;
+        font-size: $social-heading;
         color: $gold-color;
     }
 
@@ -110,11 +129,16 @@ $msg-bold-color: $blue-color;
 
 }
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 900px){
    
     #contact-container{
-        max-width: 100vw;
+        min-width: 95vw;
     }
+
+    .contact-section{
+        flex-direction: column;
+        min-width: 95vw;
+   }
 
     .box{
         min-width: 100%;
@@ -126,10 +150,5 @@ $msg-bold-color: $blue-color;
         border-top-style: hidden;
     }
 
-    .contact-section{
-        flex-direction: column;
-        min-width: 95vw;
-        gap: 0rem;
-   }
 
 }
